--- a/templates/comercio_cripto.html
+++ b/templates/comercio_cripto.html
@@ -63,13 +63,11 @@
             </div>
             <!--Recordar: Hacer el botón de cambio-->
             <div class="row">
-                <div class="col-4">
-
-                </div>
+                <div class="col-4"></div>
                 <div class="col-4 py-5 text-center">
                     <input class="form-control me-2 text-center" type="search" placeholder="0 USDT" name="quantity"
                         aria-label="#">
-                    <p class="amarillo pt-3">100.00 {{coin['acronym']}} - 100.00 USDT</p>
+                    <p class="amarillo pt-3">1.00 {{coin['acronym']}} - 1.00 USDT</p>
                 </div>
                 <div class="col-4 py-5">
                     <a href="/" type="button" class="btn magenta btn-lg">⇵ {{coin['acronym']}}</a>
