--- a/templates/profile.html
+++ b/templates/profile.html
@@ -62,9 +62,11 @@
                     <img width="100" height="100" src="https://i.imgur.com/iYKmUvA.png" alt="" srcset="">
                 </div>
                 <div class="col-4 px-5">
-                    <h2>MAFIANCE - user name</h2>
-                    <h6>Email: example@gmail.com</h6>
-                    <h6>ID: (Número de ID)</h6>
+
+                    <h2>MAFIANCE - {{user['user']}}</h2>
+                    <h6>Email: {{user['email']}}</h6>
+                    <h6>ID: {{user['_id']}}</h6>
+
                 </div>
                 <div class="col-1 amarillo text-center">
                     <h6>Usuario verificado</h6>
@@ -193,7 +195,7 @@
                     <p class="py-5 amarillo">Si no te gusta nuestra app siempre puedes quejarte con la de soporte las
                         24h,
                         o
-                        llenarnos la casilla de mensajes: mafiance.inc@gmail.org</p>
+                        llenarnos la casilla de mensajes: mafiance.inc@gmail.com</p>
                 </div>
             </div>
         </div>
