--- a/templates/p2pSeller.html
+++ b/templates/p2pSeller.html
@@ -18,10 +18,6 @@
             background-color: #1f1e1e;
         }
 
-        .gris {
-            background-color: #393939;
-        }
-
         .magenta {
             color: #b96acb;
         }
@@ -34,29 +30,14 @@
             outline: 1px solid #ffc107;
         }
 
-        .vertical-red {
-            width: 3px;
-            height: 20px;
-            background-color: red;
-            border-radius: 80px;
-        }
-
-        .vertical-blue {
-            width: 3px;
-            height: 20px;
-            background-color: rgb(76, 151, 255);
-            border-radius: 80px;
-        }
-
-        .vertical-green {
-            width: 3px;
-            height: 20px;
-            background-color: rgb(87, 255, 87);
-            border-radius: 80px;
-        }
-
         .amarillo {
             color: #ffc107;
+        }
+
+        .vertical-color {
+            width: 0.5px;
+            height: 20px;
+            border-radius: 30px;
         }
     </style>
     <title>Comercio P2P | Vender </title>
@@ -223,22 +204,20 @@
                             <p class="blanco">{{a['limit_min']}} ${{a['fiat']}} ⁓ {{a['limit_max']}} ${{a['fiat']}}</p>
                             </p>
                         </div>
-                        <div class="col-12">
-                            <div class="col-1 vertical-blue">
-                            </div>
-                            <div class="col-6">
-                                <p>{{a['payment_method']}}</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-2 amarillo">
-                    {% for u in user %}
-                    <h3>{{u['user']}}</h3>
-                    {% endfor %}
+                    <h3>{{a['user']['user']}}</h3>
                     <p>User ID: {{a['user_id']}}</p>
+                    <div class="col d-flex">
+                        <div class="col-1 vertical-color" style="background-color:{{a['method']['color']}};">
+                        </div>
+                        <div class="col-3 px-3" style="color:{{a['method']['color']}};">
+                            <p>{{a['method']['name']}}</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <i class="fa-solid fa-circle-check fa-3x"></i>
                 </div>
                 <div class="col-2 magenta">
