--- a/templates/anuncios.html
+++ b/templates/anuncios.html
@@ -87,9 +87,7 @@
             <div class="row pt-3">
                 <div class="col-4"></div>
                 <div class="col-4 cuadrados py-3" style="border-radius: 20px;">
-                    <!-- {% if not ads['status_1'] %}-->
-                    <h5 class="amarillo">{{a['status_1']}}</h5>
-                    <!-- {% endif %} -->
+                    <h5 class="amarillo">{{a['status_online']}}</h5>
                     <hr class="amarillo">
                     <h4>
                         <h4 class="">{{a['type']}}</h4> {{a['currency']}} con {{a['fiat']}}
@@ -97,8 +95,7 @@
                     <h4>ARS$ {{a['high_price']}}</h4>
                     <h4 class="amarillo">Cantidad total: {{a['amount']}} {{a['currency']}}</h4>
                     <h6>Límite: {{a['limit_min']}} - {{a['limit_max']}} {{a['fiat']}}</h6>
-                    <!--Preguntar cómo registrar un color específico en la base de datos para un parámetro-->
-                    <h6>{{a['payment_method']}}</h6>
+                    <h6>{{a['method']['name']}}</h6>
                     <p class="magenta">Id del anuncio: {{a['_id']}}</p>
                 </div>
                 <div class="col-4"></div>
