creación de ordenes

--- a/templates/p2pBuyer.html
+++ b/templates/p2pBuyer.html
@@ -229,7 +229,8 @@
                     <p>120 Órdenes | 81.10%</p>
                     <div class="pt-5"></div>
                     <div class="pt-5">
-                        <a href="/ad_selected/{{a['_id']}}" type="button" class="btn fmagenta blanco btn-lg">Comprar</a>
+                        <a href="/buy_selected_ad/{{a['_id']}}" type="button"
+                            class="btn fmagenta blanco btn-lg">Comprar</a>
                     </div>
                 </div>
             </div>
