--- a/templates/p2pSeller.html
+++ b/templates/p2pSeller.html
@@ -224,7 +224,7 @@
                     <p>120 Órdenes | 81.10%</p>
                     <div class="pt-5"></div>
                     <div class="pt-5">
-                        <a href="/" type="button" class="btn btn-danger btn-lg">Vender</a>
+                        <a href="/sell_selected_ad/{{a['_id']}}" type="button" class="btn btn-danger btn-lg">Vender</a>
                     </div>
                 </div>
             </div>
